# doomsday

./: .gitignore  README.md  pyproject.toml
src/doomsday/: __init__.py  dates.py  doomsday_hints.py  main.py
tests/: test_doomsday_hints.py
