[project]
name = "doomsday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo", email = "leocollins511@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
doomsday = "doomsday:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
