[project]
name = "doomsday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo", email = "leocollins511@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
doomsday = "doomsday:doomsday_game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
